resource-manifests/istio/ab-testing/destinationrule-sa-frontend-round-robin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sa-frontend
spec:
  host: sa-frontend
  trafficPolicy:
    loadBalancer:     
      simple: ROUND_ROBIN
  subsets:
  - name: white-version
    labels:
      version: white
  - name: green-version
    labels:
      version: green
